--- a/package.json
+++ b/package.json
@@ -4,5 +4,18 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "name": "movie_api",
+  "description": "my very first api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
